--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ add_subdirectory("Common")
 add_subdirectory("Malloc")
 add_subdirectory("Boot")
 add_subdirectory("KernelPlatformSupport")
+add_subdirectory("Drivers")
 add_subdirectory("Kernel")
 
 
