The kernel policy specifies the type of text display device.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
     "include/timer_device.hpp"
     "include/pit_timer_device.hpp" "src/pit_timer_device.cpp"
     "include/vga_text_display_device.hpp" "src/vga_text_display_device.cpp"
+    "include/kernel_policy.hpp" 
     "include/kernel.hpp" "src/kernel.cpp"
     "include/page_frame_allocator.hpp"
     "include/page_frame_allocator_configuration_operation.hpp"
