--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -87,6 +87,7 @@ if (NOT CMAKE_CROSSCOMPILING)
                    "test/test_idt.cpp"
                    "test/test_gdt.cpp"
                    "test/test_i386_page_directory_entry.cpp"
+                   "test/test_i386_page_table_entry.cpp"
                    "test/test_main.cpp"
                    )
 
