--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -57,7 +57,7 @@ list(APPEND SOURCE_FILES
      "include/platform/i386/mmu.hpp" "src/platform/i386/mmu.cpp"
      "include/platform/i386/kernel_address_space_bootstrapper.hpp" "src/platform/i386/kernel_address_space_bootstrapper.cpp"
      "include/platform/i386/hardware_task_configuration.hpp" "src/platform/i386/hardware_task_configuration.cpp"
-     "include/platform/i386/gdt.h" "src/platform/i386/gdt.c"
+     "include/platform/i386/gdt.hpp" "src/platform/i386/gdt.cpp"
      "include/platform/i386/tss.h"
      "include/platform/i386/hardware_interrupt_controller.hpp" "src/platform/i386/hardware_interrupt_controller.cpp"
      
