--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -61,9 +61,10 @@ list(APPEND SOURCE_FILES
      "include/platform/i386/tss.hpp"
      "include/platform/i386/hardware_interrupt_controller.hpp" "src/platform/i386/hardware_interrupt_controller.cpp"
 
-     "include/platform/x86_64/tss.hpp"
      "include/platform/x86_64/hardware_task_configuration.hpp" "src/platform/x86_64/hardware_task_configuration.cpp"
-     
+     "include/platform/x86_64/tss.hpp"
+     "include/platform/x86_64/gdt.hpp" "src/platform/x86_64/gdt.cpp"
+
      "include/platform/pc/pic.h" "src/platform/pc/pic.c"
      )
 
@@ -93,6 +94,7 @@ if (NOT CMAKE_CROSSCOMPILING)
                    "test/test_i386_page_table_entry.cpp"
                    "test/test_i386_page_directory.cpp"
                    "test/test_i386_page_table.cpp"
+                   "test/test_x86_64_gdt.cpp"
                    "test/test_x86_64_tss.cpp"
                    "test/test_main.cpp"
                    )
