Increase the max length of panic messages to 1024 characters.

--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -1,11 +1,66 @@
 cmake_minimum_required(VERSION 3.6)
 
-# libKernelPlatformSupport contains some pieces which cannot be tested. These
-# generally require a compile-time or link-time seam and involve platform-
-# specific assembly code. When we're building for unit testing, we replace
-# these functions with stubs.
+# AFOX_TODO: Some of these platform-agnostic source files really are not platform-agnostic at all and assume an Intel CPU. Need to address that somehow.
+set(PLATFORM_AGNOSTIC_SOURCE_FILES
+    "include/get_frame_pointer.h"
+    "include/halt.h"
+    "include/idt_asm.h"
+    "include/inout.h"
+    "include/interrupt_asm.h"
+    "include/seg.h"
+    "include/page_size.hpp"
+    "include/logical_addressing.hpp"
+    )
+
+set(I386_SOURCE_FILES
+    "include/platform/i386/idt.h" "src/platform/i386/idt.c"
+    "include/platform/i386/isr_install.h" "${CMAKE_CURRENT_BINARY_DIR}/i386_isr_install.c"
+    "include/platform/i386/protection_flags.hpp"
+    "include/platform/i386/page_directory.hpp" "src/platform/i386/page_directory.cpp"
+    "include/platform/i386/page_directory_entry.hpp" "src/platform/i386/page_directory_entry.cpp"
+    "include/platform/i386/page_table.hpp" "src/platform/i386/page_table.cpp"
+    "include/platform/i386/page_table_entry.hpp" "src/platform/i386/page_table_entry.cpp"
+    "include/platform/i386/physical_memory_map.hpp" "src/platform/i386/physical_memory_map.cpp"
+    "include/platform/i386/mmu.hpp" "src/platform/i386/mmu.cpp"
+    "include/platform/i386/kernel_address_space_bootstrapper.hpp" "src/platform/i386/kernel_address_space_bootstrapper.cpp"
+    "include/platform/i386/hardware_memory_management_unit.hpp"
+    "include/platform/i386/hardware_task_configuration.hpp" "src/platform/i386/hardware_task_configuration.cpp"
+    "include/platform/i386/gdt.hpp" "src/platform/i386/gdt.cpp"
+    "include/platform/i386/tss.hpp"
+    "include/platform/i386/hardware_interrupt_controller.hpp" "src/platform/i386/hardware_interrupt_controller.cpp"
+    "include/platform/i386/lgdt.hpp" "src/platform/i386/lgdt.S"
+    "include/platform/i386/ltr.hpp" "src/platform/i386/ltr.S"
+    "include/platform/i386/creg.hpp" "src/platform/i386/creg.S"
+    )
+
+set(X86_64_SOURCE_FILES
+    "include/platform/x86_64/hardware_task_configuration.hpp" "src/platform/x86_64/hardware_task_configuration.cpp"
+    "include/platform/x86_64/tss.hpp"
+    "include/platform/x86_64/gdt.hpp" "src/platform/x86_64/gdt.cpp"
+    "include/platform/x86_64/physical_memory_map.hpp" "src/platform/x86_64/physical_memory_map.cpp"
+    "include/platform/x86_64/page_directory_pointer_table.hpp"
+    "include/platform/x86_64/page_table_entry.hpp"
+    "include/platform/x86_64/generic_page_directory_entry.hpp"
+    "include/platform/x86_64/page_directory_pointer_table_entry.hpp"
+    "include/platform/x86_64/page_map_level_four.hpp"
+    "include/platform/x86_64/page_directory.hpp"
+    "include/platform/x86_64/page_map_level_four_entry.hpp"
+    "include/platform/x86_64/page_directory_entry.hpp"
+    "include/platform/x86_64/page_table.hpp"
+    "include/platform/x86_64/lgdt.hpp" "src/platform/x86_64/lgdt.S"
+    "include/platform/x86_64/ltr.hpp" "src/platform/x86_64/ltr.S"
+    "include/platform/x86_64/creg.hpp" "src/platform/x86_64/creg.S"
+    "include/platform/x86_64/kernel_address_space_bootstrapper.hpp" "src/platform/x86_64/kernel_address_space_bootstrapper.cpp"
+    "include/platform/x86_64/paging_resolver.hpp"
+    "include/platform/x86_64/hardware_memory_management_unit.hpp"
+    )
+
+set(PC_SOURCE_FILES
+    "include/platform/pc/pic.h" "src/platform/pc/pic.c"
+    )
+    
 if(CMAKE_CROSSCOMPILING)
-    set(SOURCE_FILES
+    set(PLATFORM_SPECIFIC_SOURCE_FILES
         "src/${CMAKE_SYSTEM_PROCESSOR}/get_frame_pointer.S"
         "src/${CMAKE_SYSTEM_PROCESSOR}/halt.S"
         "src/${CMAKE_SYSTEM_PROCESSOR}/idt_asm.S"
@@ -15,70 +70,41 @@ if(CMAKE_CROSSCOMPILING)
         )
     GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/KernelPlatformSupport/src/${CMAKE_SYSTEM_PROCESSOR}/isr_wrapper_asm.S.erb"
                                "${CMAKE_CURRENT_BINARY_DIR}/isr_wrapper_asm.S")
+
+    list(APPEND PLATFORM_SPECIFIC_SOURCE_FILES
+        "${PC_SOURCE_FILES}"
+        )
+
+    if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386")
+        list(APPEND PLATFORM_SPECIFIC_SOURCE_FILES
+            "${I386_SOURCE_FILES}"
+            )
+    elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
+        list(APPEND PLATFORM_SPECIFIC_SOURCE_FILES
+            "${I386_SOURCE_FILES}" # AFOX_TODO: It should eventually not be necessary to include both i386 and x86_64 bits when building the x86_64 kernel.
+            "${X86_64_SOURCE_FILES}"
+            )
+    endif()
 else(CMAKE_CROSSCOMPILING)
-    set(SOURCE_FILES
+    set(PLATFORM_SPECIFIC_SOURCE_FILES
         "src/host/get_frame_pointer.c"
         "src/host/halt.c"
         "src/host/idt.c"
         "src/host/inout.c"
         "src/host/interrupt.c"
         "${CMAKE_CURRENT_BINARY_DIR}/isr_wrapper.c"
+        "${I386_SOURCE_FILES}"
+        "${X86_64_SOURCE_FILES}"
+        "${PC_SOURCE_FILES}"
         )
     GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/KernelPlatformSupport/src/host/isr_wrapper.c.erb"
                                "${CMAKE_CURRENT_BINARY_DIR}/isr_wrapper.c")
 endif(CMAKE_CROSSCOMPILING)
 
-list(APPEND SOURCE_FILES
-     "include/get_frame_pointer.h"
-     "include/halt.h"
-     "include/idt_asm.h"
-     "include/inout.h"
-     "include/interrupt_asm.h"
-     "include/seg.h"
-     "include/page_size.hpp"
-     "include/logical_addressing.hpp"
-
-     "include/platform/i386/idt.h" "src/platform/i386/idt.c"
-     "include/platform/i386/isr_install.h" "${CMAKE_CURRENT_BINARY_DIR}/i386_isr_install.c"
-     "include/platform/i386/protection_flags.hpp"
-     "include/platform/i386/page_directory.hpp" "src/platform/i386/page_directory.cpp"
-     "include/platform/i386/page_directory_entry.hpp" "src/platform/i386/page_directory_entry.cpp"
-     "include/platform/i386/page_table.hpp" "src/platform/i386/page_table.cpp"
-     "include/platform/i386/page_table_entry.hpp" "src/platform/i386/page_table_entry.cpp"
-     "include/platform/i386/physical_memory_map.hpp" "src/platform/i386/physical_memory_map.cpp"
-     "include/platform/i386/mmu.hpp" "src/platform/i386/mmu.cpp"
-     "include/platform/i386/kernel_address_space_bootstrapper.hpp" "src/platform/i386/kernel_address_space_bootstrapper.cpp"
-     "include/platform/i386/hardware_memory_management_unit.hpp"
-     "include/platform/i386/hardware_task_configuration.hpp" "src/platform/i386/hardware_task_configuration.cpp"
-     "include/platform/i386/gdt.hpp" "src/platform/i386/gdt.cpp"
-     "include/platform/i386/tss.hpp"
-     "include/platform/i386/hardware_interrupt_controller.hpp" "src/platform/i386/hardware_interrupt_controller.cpp"
-     "include/platform/i386/lgdt.hpp" "src/platform/i386/lgdt.S"
-     "include/platform/i386/ltr.hpp" "src/platform/i386/ltr.S"
-     "include/platform/i386/creg.hpp" "src/platform/i386/creg.S"
-     
-     "include/platform/x86_64/hardware_task_configuration.hpp" "src/platform/x86_64/hardware_task_configuration.cpp"
-     "include/platform/x86_64/tss.hpp"
-     "include/platform/x86_64/gdt.hpp" "src/platform/x86_64/gdt.cpp"
-     "include/platform/x86_64/physical_memory_map.hpp" "src/platform/x86_64/physical_memory_map.cpp"
-     "include/platform/x86_64/page_directory_pointer_table.hpp"
-     "include/platform/x86_64/page_table_entry.hpp"
-     "include/platform/x86_64/generic_page_directory_entry.hpp"
-     "include/platform/x86_64/page_directory_pointer_table_entry.hpp"
-     "include/platform/x86_64/page_map_level_four.hpp"
-     "include/platform/x86_64/page_directory.hpp"
-     "include/platform/x86_64/page_map_level_four_entry.hpp"
-     "include/platform/x86_64/page_directory_entry.hpp"
-     "include/platform/x86_64/page_table.hpp"
-     "include/platform/x86_64/lgdt.hpp" "src/platform/x86_64/lgdt.S"
-     "include/platform/x86_64/ltr.hpp" "src/platform/x86_64/ltr.S"
-     "include/platform/x86_64/creg.hpp" "src/platform/x86_64/creg.S"
-     "include/platform/x86_64/kernel_address_space_bootstrapper.hpp" "src/platform/x86_64/kernel_address_space_bootstrapper.cpp"
-     "include/platform/x86_64/paging_resolver.hpp"
-     "include/platform/x86_64/hardware_memory_management_unit.hpp"
-
-     "include/platform/pc/pic.h" "src/platform/pc/pic.c"
-     )
+set(SOURCE_FILES
+    "${PLATFORM_SPECIFIC_SOURCE_FILES}"
+    "${PLATFORM_AGNOSTIC_SOURCE_FILES}"
+    )
 
 GenerateSourceFromTemplate("${PROJECT_SOURCE_DIR}/KernelPlatformSupport/src/platform/i386/isr_install.c.erb"
                            "${CMAKE_CURRENT_BINARY_DIR}/i386_isr_install.c")
