Move Logger from libKernel to libKernelPlatformSupport
BUG: We need a better way to allow platform-specific kernel code to
depend on some bits of platform-agnostic code. For example, does this
indicate that Logger should be moved to libCommon or that we need a new
library such as a libKernelCommon?

--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -11,6 +11,7 @@ set(PLATFORM_AGNOSTIC_SOURCE_FILES
     "include/page_size.hpp"
     "include/logical_addressing.hpp"
     "include/platform/i386/idt.h" "src/platform/i386/idt.c"
+    "include/logger.hpp" "src/logger.cpp"
     )
 
 set(I386_SOURCE_FILES
