Add tests for i386::KernelAddressSpaceBootstrapper.

--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -133,6 +133,7 @@ if (NOT CMAKE_CROSSCOMPILING)
              "test/test_i386_gdt.cpp"
              "test/test_i386_page_directory_entry.cpp"
              "test/test_i386_page_table_entry.cpp"
+             "test/test_i386_kernel_address_space_bootstrapper.cpp"
              )
     else (BUILD_32_BIT_TESTS)
         list(APPEND TEST_SOURCE_FILES
