--- a/KernelPlatformSupport/CMakeLists.txt
+++ b/KernelPlatformSupport/CMakeLists.txt
@@ -20,7 +20,8 @@ set(I386_SOURCE_FILES
     "include/platform/i386/page_directory_entry.hpp"
     "include/platform/i386/page_table.hpp"
     "include/platform/i386/page_table_entry.hpp"
-    "include/platform/i386/physical_memory_map.hpp" "src/platform/i386/physical_memory_map.cpp"
+    "include/platform/i386/generic_physical_memory_map.hpp"
+    "include/platform/i386/physical_memory_map.hpp"
     "include/platform/i386/generic_kernel_address_space_bootstrapper.hpp"
     "include/platform/i386/kernel_address_space_bootstrapper.hpp" "src/platform/i386/kernel_address_space_bootstrapper.cpp"
     "include/platform/i386/paging_resolver.hpp"
@@ -38,7 +39,7 @@ set(X86_64_SOURCE_FILES
     "include/platform/x86_64/hardware_task_configuration.hpp" "src/platform/x86_64/hardware_task_configuration.cpp"
     "include/platform/x86_64/tss.hpp"
     "include/platform/x86_64/gdt.hpp" "src/platform/x86_64/gdt.cpp"
-    "include/platform/x86_64/physical_memory_map.hpp" "src/platform/x86_64/physical_memory_map.cpp"
+    "include/platform/x86_64/physical_memory_map.hpp"
     "include/platform/x86_64/page_directory_pointer_table.hpp"
     "include/platform/x86_64/page_table_entry.hpp"
     "include/platform/x86_64/generic_page_directory_entry.hpp"
