The Kernel global is instantiated inside of an aligned_storage.
This permits instantiation to occur later than call_global_constructors(),
and we can pass parameters to the constructor as needed. So, the awkward
two-phase initialization process goes away.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -7,7 +7,7 @@ set(PLATFORM_AGNOSTIC_SOURCE_FILES
     "include/backtrace.hpp" "src/backtrace.cpp"
     "include/panic.h" "src/panic.cpp"
     "include/kernel_policy.hpp" 
-    "include/kernel.hpp" "src/kernel.cpp"
+    "include/kernel.hpp" "src/kernel.cpp" "src/kernel_main.cpp"
     "include/page_frame_allocator.hpp"
     "include/page_frame_allocator_configuration_operation.hpp"
     "include/multiboot_memory_map_page_frame_enumerator.hpp"
