--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -53,6 +53,7 @@ set(I386_SOURCE_FILES
     "include/platform/i386/hardware_task_configuration.hpp" "src/platform/i386/hardware_task_configuration.cpp"
     "include/platform/i386/gdt.hpp" "src/platform/i386/gdt.cpp"
     "include/platform/i386/tss.hpp"
+    "include/platform/i386/interrupt_controller.hpp" "src/platform/i386/interrupt_controller.cpp"
     "include/platform/i386/hardware_interrupt_controller.hpp" "src/platform/i386/hardware_interrupt_controller.cpp"
     "include/platform/i386/lgdt.hpp" "src/platform/i386/lgdt.S"
     "include/platform/i386/ltr.hpp" "src/platform/i386/ltr.S"
@@ -75,6 +76,7 @@ set(X86_64_SOURCE_FILES
     "include/platform/x86_64/page_map_level_four_entry.hpp"
     "include/platform/x86_64/page_directory_entry.hpp"
     "include/platform/x86_64/page_table.hpp"
+    "include/platform/x86_64/interrupt_controller.hpp" "src/platform/x86_64/interrupt_controller.cpp"
     "include/platform/x86_64/hardware_interrupt_controller.hpp" "src/platform/x86_64/hardware_interrupt_controller.cpp"
     "include/platform/x86_64/lgdt.hpp" "src/platform/x86_64/lgdt.S"
     "include/platform/x86_64/ltr.hpp" "src/platform/x86_64/ltr.S"
