Extract device driver initialization to new class DeviceDrivers.
This class is implemented for i386 and x86_64. Though, these two platforms
are very similar and I'm considering whether the two classes can be
consolidated. Of course, future platforms are not usually this similar.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -58,6 +58,7 @@ set(I386_SOURCE_FILES
 	"include/platform/i386/panic_interrupt_handler.hpp" "src/platform/i386/panic_interrupt_handler.cpp"
     "include/platform/i386/page_fault_interrupt_handler.hpp" "src/platform/i386/page_fault_interrupt_handler.cpp"
     "include/platform/i386/hardware_interrupt_controller.hpp" "src/platform/i386/hardware_interrupt_controller.cpp"
+    "include/platform/i386/device_drivers.hpp" "src/platform/i386/device_drivers.cpp"
     "include/platform/i386/lgdt.hpp" "src/platform/i386/lgdt.S"
     "include/platform/i386/ltr.hpp" "src/platform/i386/ltr.S"
     "include/platform/i386/creg.hpp" "src/platform/i386/creg.S"
@@ -85,6 +86,7 @@ set(X86_64_SOURCE_FILES
 	"include/platform/x86_64/panic_interrupt_handler.hpp" "src/platform/x86_64/panic_interrupt_handler.cpp"
     "include/platform/x86_64/page_fault_interrupt_handler.hpp" "src/platform/x86_64/page_fault_interrupt_handler.cpp"
     "include/platform/x86_64/hardware_interrupt_controller.hpp" "src/platform/x86_64/hardware_interrupt_controller.cpp"
+    "include/platform/x86_64/device_drivers.hpp" "src/platform/x86_64/device_drivers.cpp"
     "include/platform/x86_64/lgdt.hpp" "src/platform/x86_64/lgdt.S"
     "include/platform/x86_64/ltr.hpp" "src/platform/x86_64/ltr.S"
     "include/platform/x86_64/creg.hpp" "src/platform/x86_64/creg.S"
