--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -60,6 +60,7 @@ set(I386_SOURCE_FILES
     "include/platform/i386/ltr.hpp" "src/platform/i386/ltr.S"
     "include/platform/i386/creg.hpp" "src/platform/i386/creg.S"
     "include/platform/i386/interrupt_numbers.hpp"
+    "include/platform/i386/lidt.hpp" "src/platform/i386/lidt.S"
     )
 
 set(X86_64_SOURCE_FILES
@@ -91,6 +92,7 @@ set(X86_64_SOURCE_FILES
     "include/platform/x86_64/paging_resolver.hpp"
     "include/platform/x86_64/hardware_memory_management_unit.hpp"
     "include/platform/i386/interrupt_numbers.hpp"
+    "include/platform/x86_64/lidt.hpp" "src/platform/x86_64/lidt.S"
     )
 
 set(PC_SOURCE_FILES
