--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -54,7 +54,7 @@ set(I386_SOURCE_FILES
     "include/platform/i386/interrupt_dispatcher.hpp"
 	"include/platform/i386/panic_interrupt_handler.hpp" "src/platform/i386/panic_interrupt_handler.cpp"
     "include/platform/i386/page_fault_interrupt_handler.hpp" "src/platform/i386/page_fault_interrupt_handler.cpp"
-    "include/platform/i386/hardware_interrupt_controller.hpp" "src/platform/i386/hardware_interrupt_controller.cpp"
+    "include/platform/i386/hardware_interrupt_controller.hpp"
     "include/platform/i386/device_drivers.hpp"
     "include/platform/i386/lgdt.hpp" "src/platform/i386/lgdt.S"
     "include/platform/i386/ltr.hpp" "src/platform/i386/ltr.S"
@@ -84,7 +84,7 @@ set(X86_64_SOURCE_FILES
     "include/platform/x86_64/interrupt_dispatcher.hpp"
 	"include/platform/x86_64/panic_interrupt_handler.hpp" "src/platform/x86_64/panic_interrupt_handler.cpp"
     "include/platform/x86_64/page_fault_interrupt_handler.hpp" "src/platform/x86_64/page_fault_interrupt_handler.cpp"
-    "include/platform/x86_64/hardware_interrupt_controller.hpp" "src/platform/x86_64/hardware_interrupt_controller.cpp"
+    "include/platform/x86_64/hardware_interrupt_controller.hpp"
     "include/platform/x86_64/device_drivers.hpp"
     "include/platform/x86_64/lgdt.hpp" "src/platform/x86_64/lgdt.S"
     "include/platform/x86_64/ltr.hpp" "src/platform/x86_64/ltr.S"
