Consolidate i386 and x86_64 InterruptController implementations

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -49,7 +49,7 @@ set(I386_SOURCE_FILES
     "include/platform/i386/hardware_task_configuration.hpp" "src/platform/i386/hardware_task_configuration.cpp"
     "include/platform/i386/gdt.hpp" "src/platform/i386/gdt.cpp"
     "include/platform/i386/tss.hpp"
-    "include/platform/i386/interrupt_controller.hpp" "src/platform/i386/interrupt_controller.cpp"
+    "include/platform/i386/interrupt_controller.hpp"
     "include/platform/i386/interrupt_parameters.hpp"
     "include/platform/i386/interrupt_dispatcher.hpp"
 	"include/platform/i386/panic_interrupt_handler.hpp" "src/platform/i386/panic_interrupt_handler.cpp"
@@ -79,7 +79,7 @@ set(X86_64_SOURCE_FILES
     "include/platform/x86_64/page_map_level_four_entry.hpp"
     "include/platform/x86_64/page_directory_entry.hpp"
     "include/platform/x86_64/page_table.hpp"
-    "include/platform/x86_64/interrupt_controller.hpp" "src/platform/x86_64/interrupt_controller.cpp"
+    "include/platform/x86_64/interrupt_controller.hpp"
     "include/platform/x86_64/interrupt_parameters.hpp"
     "include/platform/x86_64/interrupt_dispatcher.hpp"
 	"include/platform/x86_64/panic_interrupt_handler.hpp" "src/platform/x86_64/panic_interrupt_handler.cpp"
