32-bit kernel must use march=i486 or higher to use GCC atomic built-ins.
Both i386 and i486 are truly ancient CPUs. I'm not particularly concerned
with the differences except that they are both 32-bit Intel CPUs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,9 @@ if(CMAKE_CROSSCOMPILING)
     # kernel must perform some magic to boot which is never done in userspace
     # programs.
     set(COMPILER_FLAGS_C_AND_CXX "-O2 -mno-sse -mno-mmx -fno-stack-protector -nostdlib -ffreestanding")
-    if ("${BUILD_ARCH}" STREQUAL "x86_64")
+    if ("${BUILD_ARCH}" STREQUAL "i386")
+        string(APPEND COMPILER_FLAGS_C_AND_CXX " -march=i486") # necessary for GCC atomic built-ins
+    elseif ("${BUILD_ARCH}" STREQUAL "x86_64")
         string(APPEND COMPILER_FLAGS_C_AND_CXX " -mno-red-zone -mcmodel=kernel")
     endif()
 
