--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -63,6 +63,7 @@ set(I386_SOURCE_FILES
     "include/platform/i386/lidt.hpp" "src/platform/i386/lidt.S"
     "include/platform/i386/idt.hpp"
     "include/platform/i386/interrupt_descriptor.hpp"
+    "src/platform/i386/context_switch.S"
     )
 
 set(X86_64_SOURCE_FILES
