--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -8,6 +8,7 @@ set(PLATFORM_AGNOSTIC_SOURCE_FILES
     "include/panic.h" "src/panic.cpp"
     "include/kernel_policy.hpp" 
     "include/kernel.hpp" "src/kernel.cpp" "src/kernel_main.cpp"
+    "include/thread.hpp"
     "include/page_frame_allocator.hpp"
     "include/page_frame_allocator_configuration_operation.hpp"
     "include/multiboot_memory_map_page_frame_enumerator.hpp"
