--- a/grub.cfg
+++ b/grub.cfg
@@ -4,6 +4,6 @@ set default=0
 menuentry "Flapjack OS" {
 	multiboot /boot/kernel.bin
 	module /modules/test.bin
+	module /modules/test2.bin
 	boot
 }
-
