--- a/grub.cfg
+++ b/grub.cfg
@@ -3,7 +3,7 @@ set default=0
 
 menuentry "Flapjack OS" {
 	multiboot /boot/kernel.bin
-	module /modules/test.bin
-	module /modules/test2.bin
+	module /modules/Test1
+	module /modules/Test2
 	boot
 }
